// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text field Default renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-input-id-1"
  >
    Label
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m"
    id="example-input-id-1"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field Default renders correctly when required 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-input-id-1"
  >
    Label
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m"
    id="example-input-id-1"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field Default renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-input-id-1"
  >
    Label
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-input-id-1"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field Default renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-input-id-1"
  >
    Label
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m custom-class custom-class--test"
    id="example-input-id-1"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field Default renders correctly with extra group class names 1`] = `
<div
  class="ecl-form-group custom-group-class custom-group-class--test"
>
  <label
    class="ecl-form-label"
    for="example-input-id-1"
  >
    Label
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m"
    id="example-input-id-1"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field Default renders correctly with extra label class names 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label custom-label-class custom-label-class--test"
    for="example-input-id-1"
  >
    Label
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m"
    id="example-input-id-1"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field Disabled renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m"
    disabled=""
    id="example-input-id-2"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field Disabled renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group"
>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    disabled=""
    id="example-input-id-2"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field Disabled renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group"
>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m custom-class custom-class--test"
    disabled=""
    id="example-input-id-2"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field Disabled renders correctly with extra group class names 1`] = `
<div
  class="ecl-form-group custom-group-class custom-group-class--test"
>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m"
    disabled=""
    id="example-input-id-2"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field With error renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <div
    class="ecl-feedback-message"
  >
    This is the error message
  </div>
  <input
    class="ecl-text-input ecl-text-input--invalid ecl-text-input--m"
    id="example-input-id-3"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field With error renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group"
>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <div
    class="ecl-feedback-message"
  >
    This is the error message
  </div>
  <input
    class="ecl-text-input ecl-text-input--invalid ecl-text-input--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-input-id-3"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field With error renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group"
>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <div
    class="ecl-feedback-message"
  >
    This is the error message
  </div>
  <input
    class="ecl-text-input ecl-text-input--invalid ecl-text-input--m custom-class custom-class--test"
    id="example-input-id-3"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field With error renders correctly with extra group class names 1`] = `
<div
  class="ecl-form-group custom-group-class custom-group-class--test"
>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <div
    class="ecl-feedback-message"
  >
    This is the error message
  </div>
  <input
    class="ecl-text-input ecl-text-input--invalid ecl-text-input--m"
    id="example-input-id-3"
    required=""
    type="text"
  />
</div>
`;

exports[`Text field with validation enabled and missing input data returns the right warning message 1`] = `
<div
  class="ecl-form-group"
>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-text-input ecl-text-input--m"
    id="example-input-id-1"
    required=""
    type="text"
  />
</div>
`;
